Updated main watch task

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate for a standalone Pattern Lab instance that will be a dependency of a Drupal theme.",
   "scripts": {
     "start": "concurrently \"npm run patterns\" \"php core/console --server --quiet --timeout=0\"",
-    "watch": "concurrently --names \"sass\" --prefix name \"npm run sass:watch\" \"npm run scripts:watch\" \"npm run patterns:watch\"",
+    "watch": "concurrently \"npm run sass:watch\" \"npm run scripts:watch\" \"npm run patterns:watch\" \"php core/console --server --quiet --timeout=0\"",
     "patterns": "php core/console --generate",
     "patterns:watch": "php core/console --watch --timeout=0",
     "patterns:server": "php core/console --server --timeout=0",
